@@ -4,9 +4,11 @@ DIST uniloader-0.6.0.tar.gz 12290148 SHA256 1fecf244b9fafefd9cb7012a98e0365d95ba
 DIST uniloader-0.6.5.tar.gz 12502438 SHA256 d804a25b93b58956f5a6936fc8a518dfc74f07db361b8f6852e097867ee087e3 SHA512 4e005f24545c46ed7db6b5833562974b2ded579f4251ef236aca38cc491e4ecf3aa9e4acf76d6416d7520925710714033eb5ed39bcdd71c6e0667f6f124e4a0c WHIRLPOOL e6be66205e2d1cfcbd81a7449dd7708b89a6454a6e151fcd0a4d3b87d21dceb22d43217b7697278a5cc83b2329692d040d9c3e3816fac6a25b8efe97403bcbd8
 DIST uniloader-0.6.6.tar.gz 12501344 SHA256 b3518b63de780ef675f115736ee2f4a1b80e077e996842beaf0a2abb8ed26c59 SHA512 16c14ff0acd17133b2052fb381017ff5a606c206c8e8ad4f65f257fde1c3eea175011726f2bed914b156872620b7e1839c69d956efa92a4b78c33c24cb3dd86c WHIRLPOOL c4dcfff5b32f91ee72156897b5510eba8619984c53ec8c4cb60028a277d5233717562fef4800d1736b22bdfbd3d45324224d009223004e71a1d2c0439e5b92f0
 DIST uniloader-0.6.7.tar.gz 12503997 SHA256 02e4b0b12bfeea08d0311f4f346ecf5d589e46e41087fefad115d1c91d0b4335 SHA512 d63b2945e4601fd7753d3f5c75424c0e5da3998fd2e11c7cea7e599163dc8f869fbabaa9ce6ff9ff06efa0cb09b6759348843089d2052c61901da4269b537f0f WHIRLPOOL ea9f1fb10466ca1f6a5075fb15ce98d2057300b0a6e8344058e77826996a1f16b31a84e66f9bca4a50b8e5d39584e64cbf63f3a12ba32709ffceb51a0682014d
+DIST uniloader-0.7.5.tar.gz 14678614 SHA256 fc2273fe38c9d7850a409dde52161adbdcbfb71c15b9cc677ed915a4cd533c14 SHA512 12cbb19e1e13a5a8e60b1245574fae6dc9d5416eee1e0ed972acba3c2697b6a5b84a36da62742e3139b552e767b2816fd44abac89ed8471e9926aa18e913b476 WHIRLPOOL e5ec0c41cf7c35635866fd10056e6c7389175220cb6580cc0aa2d0433f921f09c77404404295c372581ca8772d4a092fa8c9555995decbad6f1b83c1d02d067d
 EBUILD uniloader-0.6.0.ebuild 912 SHA256 2d7421320b3f0bf5bf634dccfc9e7db52eea85191927fdd0d3071d46e9eabd61 SHA512 d6d5c1639b42b5defb3a9e5e1d3217c29fa90449ac39781c597b889e15728a7a095912f189fdd3157a3d4dfb4ec376313ecb732869108349ae310fe3241d4905 WHIRLPOOL c8411d1606f03822d94b79e1bc9285d69e3958a8c8e5298eef7045a6b435c5a2ef5a1201b163a8f1753f8b6376a09e08cace16cb3fc173c36bdb46f3a18b9e52
 EBUILD uniloader-0.6.5.ebuild 912 SHA256 2d7421320b3f0bf5bf634dccfc9e7db52eea85191927fdd0d3071d46e9eabd61 SHA512 d6d5c1639b42b5defb3a9e5e1d3217c29fa90449ac39781c597b889e15728a7a095912f189fdd3157a3d4dfb4ec376313ecb732869108349ae310fe3241d4905 WHIRLPOOL c8411d1606f03822d94b79e1bc9285d69e3958a8c8e5298eef7045a6b435c5a2ef5a1201b163a8f1753f8b6376a09e08cace16cb3fc173c36bdb46f3a18b9e52
 EBUILD uniloader-0.6.6.ebuild 912 SHA256 2d7421320b3f0bf5bf634dccfc9e7db52eea85191927fdd0d3071d46e9eabd61 SHA512 d6d5c1639b42b5defb3a9e5e1d3217c29fa90449ac39781c597b889e15728a7a095912f189fdd3157a3d4dfb4ec376313ecb732869108349ae310fe3241d4905 WHIRLPOOL c8411d1606f03822d94b79e1bc9285d69e3958a8c8e5298eef7045a6b435c5a2ef5a1201b163a8f1753f8b6376a09e08cace16cb3fc173c36bdb46f3a18b9e52
 EBUILD uniloader-0.6.7.ebuild 871 SHA256 f3c5a612a9ec068610e7fda33b707e8e09f5228e2efc8796d5d4d4d0eb27f3a3 SHA512 248f9edfb96998705c003e57790d27a41fab08ef8bd6912f7eecaab6816834f3fd6ef5aaca586e639a511875c8434f143e194d70ea82b40c5551ca91541f0519 WHIRLPOOL dced371e67ed1566a4c540072b8c11b0f6c1303caf7373b5081cf6d4e07262eeb0d024de1b9b0d72adc882127f0ed2653b96cdbb679813f9e39e457ee96a7b53
-MISC ChangeLog 698 SHA256 40795f51149fb14dc8f319cff867a8c9177e43da41f541458ec8fb27d13ada7f SHA512 7fe2996181155ff6d674bce69083452772c8bb12d46a2ef877f33d053c2b4c1150edc7033dfdd57fffaf9fd4b511c031eb474a3ba0462d154895c1f1277c015c WHIRLPOOL 89119bc414099e1ca8327bbea3eac469ec38be0441259dea3042186fb468243fdd117efdc9b5cb2bd2db18b9b9383bd0d9d30d1774bde7f7b7c830178fdc4f2f
+EBUILD uniloader-0.7.5.ebuild 871 SHA256 f3c5a612a9ec068610e7fda33b707e8e09f5228e2efc8796d5d4d4d0eb27f3a3 SHA512 248f9edfb96998705c003e57790d27a41fab08ef8bd6912f7eecaab6816834f3fd6ef5aaca586e639a511875c8434f143e194d70ea82b40c5551ca91541f0519 WHIRLPOOL dced371e67ed1566a4c540072b8c11b0f6c1303caf7373b5081cf6d4e07262eeb0d024de1b9b0d72adc882127f0ed2653b96cdbb679813f9e39e457ee96a7b53
+MISC ChangeLog 852 SHA256 d35c728ce331afe7c187cd5b3b41ade5cd2204380215f168df1592f7dbd31afe SHA512 1e3cffff2ed717a05767a57b7f2345c59cee27156ef2f01fe7333e20f590cd475dbcff50d16a5b53eae5f354d531ffc4507ad5be5777bfcb52ffb48866235d57 WHIRLPOOL 2c3aa122929f1c7514f2dc2fc8cbfcbfcf3a57a008ee2aa3a3ab1f6224a29e01fd501b556da1ce3bf890c8fde4fc1eb118beaa3e27c1e9d8b94bc46c90127244
 MISC metadata.xml 246 SHA256 7865004b5e3824d4a508188497473a0a56c96498237986c4f1f692151bf0a01e SHA512 482630597bd2d56c1eaed7099225b4475aec8768e20bad70ea9d6b96791fa38359ba572ab9ad0fc7ea72f1ab736ed1e92fc3c156c3427b008c7220285edce11c WHIRLPOOL d7c29be66bc7bb8ea3a5c4948597ab70efd83982aaa759f621477aefa2a1203186473bc0ac961685249cf48560e011e1d457a934982c562392c289c85edd39a0
